[package]
name = "junk"
version = "0.1.2"
authors = ["jakeburden <jburden@gitlab.com>"]
edition = "2018"
repository = "https://gitlab.com/jakeburden/junk"
license = "MIT"
description = "Filter out OS junk files like .DS_Store and Thumbs.db. A Rust implementation of https://github.com/sindresorhus/junk"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.3"
lazy_static = "1.4.0"